fix: import container overflow

--- a/index.css
+++ b/index.css
@@ -72,4 +72,5 @@ math-field {
 #import-container {
     display: flex;
     gap: 12px;
+    flex-wrap: wrap;
 }
